# TBT-Segmentation

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: reuse.yml  rust.yml
res/logs_wind_front_Lateral/: SIMOUT_Ship.csv.license  SIMOUT_UAS.csv
res/logs_wind_front_Straight/: SIMOUT_UAS.csv
res/logs_wind_side_45Deg/: SIMOUT_UAS.csv
res/logs_wind_side_Lateral/: SIMOUT_UAS.csv
res/logs_wind_side_Oblique/: SIMOUT_UAS.csv
res/logs_wind_side_Straight/: SIMOUT_UAS.csv
scripts/: Makefile  clean.sh  infer_parameters_visualization.py  run.sh  visualize_ship_landing.py
src/: behaviortree.rs  command_line_parser.rs  csv_reader.rs  lib.rs  main.rs  stl.rs  table.rs  tests.rs
src/tree/shipdeck_landing/: deg45_maneuver.rs  get_trace_and_tree.rs  lateral_maneuver.rs  oblique_maneuver.rs  straight_maneuver.rs
src/tree/shipdeck_landing/atomics/: combined.rs  constants.rs  descend_touchdown.rs  heading_aligned.rs  heading_obliqued.rs  in_position.rs  move_to_touchdown.rs  velocity_aligned.rs
